@@ -1,6 +1,7 @@
 0.5.0 UNRELEASED
 
 * Add SplitResult.getaddrinfo().
+* Support query mappings and sequences in uricompose().
 
 0.4.0 2014-03-20
 
